--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.7",
-        "laravel/tinker": "^2.0"
+        "laravel/sanctum": "^2.15",
+        "laravel/tinker": "^2.0",
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
